--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         </header>
 
         <main class="content">
-            <section class="lead section section__narrow">
+            <section class="lead  section__narrow">
                 <h1 class="lead__title">Путешествия по России</h1>
                 <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь</p>
                 <img src="images/lead-polka.jpg" alt="Полка" class="lead__image" />
                 <p class="lead__caption">Ваша полка - верхняя</p>
             </section>
 
-            <section class="intro section section__narrow">
+            <section class="intro  section__narrow">
                 <h2 class="intro__title">Чего мы там не видели?</h2>
                 <p class="intro__text">
                     По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга,
@@ -58,7 +58,7 @@
                 </ul>
             </section>
 
-            <section class="places section section__narrow">
+            <section class="places section__narrow">
                 <ul class="place">
                     <li class="place__item">
                         <h2 class="place__title">Куршская коса</h2>
