--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <h2 class="places__title">Алтай</h2>
                         <div class="places__website">
                             <p class="places__url-heading">URL</p>
-                            <a href="https://www.facebook.com/media/set/?set=a.668674479955563.1073741909.100004390512868" class="places__link_hover">Facebook</a>
+                            <a href="https://www.facebook.com/media/set/?set=a.668674479955563.1073741909.100004390512868" class="places__link">Facebook</a>
                         </div>
                         <img src="images/place-altai.jpg" alt="Алтай" class="places__image" />
                         <div class="places__description">
