--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <main class="content">
             <section class="lead section section_narrow">
                 <h1 class="lead__title">Путешествия по России</h1>
-                <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь</p>
+                <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
                 <img src="images/lead-polka.jpg" alt="Полка" class="lead__image" />
                 <p class="lead__caption">Ваша полка - верхняя</p>
             </section>
@@ -58,86 +58,86 @@
             </section>
 
             <section class="places section section_narrow">
-                <ul class="places__gallery">
-                    <li class="places__item">
-                        <h2 class="places__title">Куршская коса</h2>
-                        <div class="places__website">
-                            <p class="places__url-heading">URL</p>
-                            <a href="park-kosa.ru" class="places__link">park-kosa.ru</a>
+                <ul class="place">
+                    <li class="place__item">
+                        <h2 class="place__title">Куршская коса</h2>
+                        <div class="place__website">
+                            <p class="place__url-heading">URL</p>
+                            <a href="park-kosa.ru" class="place__link">park-kosa.ru</a>
                         </div>
-                        <img src="images/place-kosa.jpg" alt="Куршская коса" class="places__image" />
-                        <div class="places__description">
-                            <p class="places__paragraph">
+                        <img src="images/place-kosa.jpg" alt="Куршская коса" class="place__image" />
+                        <div class="place__description">
+                            <p class="place__paragraph">
                                 Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю
                                 российского анклава.
                             </p>
-                            <p class="places__paragraph">
+                            <p class="place__paragraph">
                                 На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских
                                 городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
                             </p>
                         </div>
                     </li>
 
-                    <li class="places__item">
-                        <h2 class="places__title">Кольский</h2>
-                        <div class="places__website">
-                            <p class="places__url-heading">URL</p>
-                            <a href="https://www.facebook.com/natgeo/" class="places__link">National Geographic</a>
+                    <li class="place__item">
+                        <h2 class="place__title">Кольский</h2>
+                        <div class="place__website">
+                            <p class="place__url-heading">URL</p>
+                            <a href="https://www.facebook.com/natgeo/" class="place__link">National Geographic</a>
                         </div>
-                        <img src="images/place-kolsky.jpg" alt="Куршская коса" class="places__image" />
-                        <div class="places__description">
-                            <p class="places__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-                            <p class="places__paragraph">
+                        <img src="images/place-kolsky.jpg" alt="Куршская коса" class="place__image" />
+                        <div class="place__description">
+                            <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+                            <p class="place__paragraph">
                                 Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не
                                 интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.
                             </p>
                         </div>
                     </li>
 
-                    <li class="places__item">
-                        <h2 class="places__title">Алтай</h2>
-                        <div class="places__website">
-                            <p class="places__url-heading">URL</p>
-                            <a href="https://www.facebook.com/media/set/?set=a.668674479955563.1073741909.100004390512868" class="places__link">Facebook</a>
+                    <li class="place__item">
+                        <h2 class="place__title">Алтай</h2>
+                        <div class="place__website">
+                            <p class="place__url-heading">URL</p>
+                            <a href="https://www.facebook.com/media/set/?set=a.668674479955563.1073741909.100004390512868" class="place__link">Facebook</a>
                         </div>
-                        <img src="images/place-altai.jpg" alt="Алтай" class="places__image" />
-                        <div class="places__description">
-                            <p class="places__paragraph">
+                        <img src="images/place-altai.jpg" alt="Алтай" class="place__image" />
+                        <div class="place__description">
+                            <p class="place__paragraph">
                                 Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете
                                 познакомиться с невидимым чудом здешних мест — горным воздухом.
                             </p>
-                            <p class="places__paragraph">
+                            <p class="place__paragraph">
                                 Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И
                                 знаменитые манулы — тоже обитатели Алтайского края.
                             </p>
                         </div>
                     </li>
 
-                    <li class="places__item">
-                        <h2 class="places__title">Зимний Байкал</h2>
-                        <div class="places__website">
-                            <p class="places__url-heading">URL</p>
-                            <a href="https://vk.com/baikalmile" class="places__link">https://vk.com/baikalmile</a>
+                    <li class="place__item">
+                        <h2 class="place__title">Зимний Байкал</h2>
+                        <div class="place__website">
+                            <p class="place__url-heading">URL</p>
+                            <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
                         </div>
-                        <img src="images/place-winter-baikal.jpg" alt="Зимний байкал" class="places__image" />
-                        <div class="places__description">
-                            <p class="places__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
-                            <p class="places__paragraph">
+                        <img src="images/place-winter-baikal.jpg" alt="Зимний байкал" class="place__image" />
+                        <div class="place__description">
+                            <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
+                            <p class="place__paragraph">
                                 Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на
                                 льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
                             </p>
                         </div>
                     </li>
 
-                    <li class="places__item">
-                        <h2 class="places__title">Карелия</h2>
-                        <div class="places__website">
-                            <p class="places__url-heading">URL</p>
-                            <a href="http://vodlozero.ru/" class="places__link">http://vodlozero.ru/</a>
+                    <li class="place__item">
+                        <h2 class="place__title">Карелия</h2>
+                        <div class="place__website">
+                            <p class="place__url-heading">URL</p>
+                            <a href="http://vodlozero.ru/" class="place__link">http://vodlozero.ru/</a>
                         </div>
-                        <img src="images/place-karelia.jpg" alt="Карелия" class="places__image" />
-                        <div class="places__description">
-                            <p class="places__paragraph">
+                        <img src="images/place-karelia.jpg" alt="Карелия" class="place__image" />
+                        <div class="place__description">
+                            <p class="place__paragraph">
                                 Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за
                                 непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню
                                 километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
