--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <header class="header section">
                 <img src="images/header-logo.svg" alt="Карта России" class="header__logo" />
                 <div class="header__lang-list">
-                <a href="#" class="header__lang-link">RU</a>
-                <a href="#" class="header__lang-link">EN</a>
+                <a href="#" class="header__lang-link_ru">RU</a>
+                <a href="#" class="header__lang-link_en">EN</a>
             </div>
         </header>
 
@@ -148,7 +148,7 @@
             </section>
 
             <section class="cover section">
-                <a class="cover__card" href="#">
+                <a class="cover__card" href="https://stampsy.com/na-elektrichkakh-do-baikala">
                     <img src="images/cover-trains.jpg" class="cover__overlay" alt="Поезда" />
                     <h2 class="cover__title">До Байкала «На собаках»</h2>
                     <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
@@ -159,11 +159,11 @@
         <footer class="footer section">
             <nav class="footer__row">
                 <ul class="footer__row-links">
-                    <li><a href="#" class="footer__row-link">Карты</a></li>
-                    <li><a href="#" class="footer__row-link">Погода</a></li>
-                    <li><a href="#" class="footer__row-link">Расписание</a></li>
-                    <li><a href="#" class="footer__row-link">Календарь</a></li>
-                    <li><a href="#" class="footer__row-link">Путешествия</a></li>
+                    <li><a href="https://yandex.ru/maps" class="footer__row-link">Карты</a></li>
+                    <li><a href="https://yandex.ru/pogoda" class="footer__row-link">Погода</a></li>
+                    <li><a href="https://rasp.yandex.ru" class="footer__row-link">Расписание</a></li>
+                    <li><a href="https://calendar.yandex.ru" class="footer__row-link">Календарь</a></li>
+                    <li><a href="https://travel.yandex.ru" class="footer__row-link">Путешествия</a></li>
                 </ul>
                 <p class="footer__copyright">&copy; 2021 Александр Малых</p>
             </nav>
