--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body class="root">
         <header class="header section">
                 <img src="images/header-logo.svg" alt="Карта России" class="header__logo" />
-                <div class="header__lang-list">
+                <div class="header__lang-link">
                 <a href="#" class="header__lang-link_ru">RU</a>
                 <a href="#" class="header__lang-link_en">EN</a>
             </div>
