--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <body class="root">
         <header class="header section">
                 <img src="images/header-logo.svg" alt="Карта России" class="header__logo" />
-                <div class="header__link">
-                <a href="#" class="header__link_lang_ru">RU</a>
-                <a href="#" class="header__link_lang_en">EN</a>
+                <div class="header__lang-list">
+                <a href="#" class="header__lang-link header__lang-link_ru">RU</a>
+                <a href="#" class="header__lang-link">EN</a>
             </div>
         </header>
 
