--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header class="header section">
                 <img src="images/header-logo.svg" alt="Карта России" class="header__logo" />
                 <div class="header__lang-list">
-                <a href="#" class="header__lang-link header__lang-link_ru">RU</a>
+                <a href="#" class="header__lang-link header__lang-link_active">RU</a>
                 <a href="#" class="header__lang-link">EN</a>
             </div>
         </header>
